Support QT_TRANSLATE_NOOP in ListElement.

Task-number: QTBUG-16289
Change-Id: I13e6859de185478e2c6c9486d8deeda103dd7b90
Reviewed-on: http://codereview.qt.nokia.com/2238
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>